<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".presentation.TicketsOfferFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvSearch"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="45dp"
        app:cardBackgroundColor="@color/colorGrey3"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:importantForAccessibility="no"
                android:src="@drawable/back_arrow_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etWhereInput"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:background="@android:color/transparent"
                android:digits="абвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textCapWords|textImeMultiLine"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivBack"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Town" />


            <ImageView
                android:id="@+id/ivReverseTown"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="10dp"
                android:importantForAccessibility="no"
                android:src="@drawable/reverse_icon"
                app:layout_constraintBottom_toBottomOf="@id/etWhereInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/etWhereInput" />


            <View
                android:id="@+id/separator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/colorGrey4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivBack"
                app:layout_constraintTop_toBottomOf="@id/etWhereInput" />

            <EditText
                android:id="@+id/etToInput"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:background="@android:color/transparent"
                android:digits="абвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textCapWords|textImeMultiLine"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivBack"
                app:layout_constraintTop_toBottomOf="@id/separator"
                tools:text="Сочи" />

            <ImageView
                android:id="@+id/ivClearTo"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="10dp"
                android:importantForAccessibility="no"
                android:src="@drawable/close_icon"
                app:layout_constraintBottom_toBottomOf="@id/etToInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/etToInput" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <HorizontalScrollView
        android:id="@+id/buttonsScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/cvSearch"
        app:layout_constraintTop_toBottomOf="@id/cvSearch">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBackDate"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:text="@string/stringBack"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorGrey3"
                app:cornerRadius="50dp"
                app:icon="@drawable/add_icon"
                app:iconGravity="start"
                app:iconSize="16dp"
                app:iconTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/secondBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/secondBtn"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:text="@string/stringTempDate"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:backgroundTint="@color/colorGrey3"
                app:cornerRadius="50dp"
                app:layout_constraintEnd_toStartOf="@id/thirdBtn"
                app:layout_constraintStart_toEndOf="@id/btnBackDate"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/thirdBtn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:text="@string/stringTempType"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorGrey3"
                app:icon="@drawable/user_type_icon"
                app:iconSize="16dp"
                app:iconTint="@color/colorGrey5"
                app:layout_constraintEnd_toStartOf="@id/btnFilter"
                app:layout_constraintStart_toEndOf="@id/secondBtn"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFilter"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:text="@string/stringFilters"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:backgroundTint="@color/colorGrey3"
                app:icon="@drawable/filter_icon"
                app:iconSize="16dp"
                app:iconTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/thirdBtn"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvDirectFlights"
        android:layout_width="0dp"
        android:layout_height="288dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonsScrollView"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvDirectFlights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/stringDirectFlights"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLayoutFlights"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/btnShowAll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvDirectFlights"
                app:layout_constraintTop_toBottomOf="@id/tvDirectFlights" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnShowAll"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/stringShowAll"
                android:textColor="@color/colorBlue"
                android:textSize="16sp"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeWidth="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShowAllTickets"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/stringWatchAllTickets"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/colorBlue"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@id/cvDirectFlights"
        app:layout_constraintStart_toStartOf="@id/cvDirectFlights"
        app:layout_constraintTop_toBottomOf="@id/cvDirectFlights" />

</androidx.constraintlayout.widget.ConstraintLayout>